[package]
name = "ccj_postprocess"
version = "1.7.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
clap = { version = "4.*", features = ["derive"] }
relative-path = "*"
regex = "*"
rayon = "*"
